# fin-rustaxum

./: Cargo.toml  README.md
src/: main.rs  routes.rs
src/handlers/: delete.rs  download.rs  upload.rs
src/models/: mod.rs
